:sparkles: first 8 questions done

--- a/Projeto2.ipynb
+++ b/Projeto2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 92,
    "id": "b0d022f0",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 93,
    "id": "b4db14f6",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 94,
    "id": "9e9a2f84",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 95,
    "id": "b2057c0d",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
        "(9700, 11)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 96,
    "id": "d2814227",
    "metadata": {
     "scrolled": true
@@ -238,7 +238,7 @@
        "4      22.3680  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 97,
    "id": "962249af",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
        "9699        Paper       11.540  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 98,
    "id": "7e4c9a2d",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 99,
    "id": "43e7444e",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 100,
    "id": "eec70bba",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
        "Name: Valor_Venda, dtype: float64"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 101,
    "id": "b8165a80",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 102,
    "id": "936d1045",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 103,
    "id": "4ded149a",
    "metadata": {},
    "outputs": [
@@ -723,7 +723,7 @@
        "4      22.3680  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 104,
    "id": "69296d71",
    "metadata": {},
    "outputs": [
@@ -756,7 +756,7 @@
        "Name: Valor_Venda, dtype: float64"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 105,
    "id": "47ec7085",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 106,
    "id": "2187c6b6",
    "metadata": {},
    "outputs": [
@@ -828,12 +828,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Maciota\\AppData\\Local\\Temp\\ipykernel_244\\3306087589.py:4: FutureWarning: \n",
+      "C:\\Users\\Maciota\\AppData\\Local\\Temp\\ipykernel_4436\\3306087589.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
       "  sns.barplot(data=total_estados,\n",
-      "C:\\Users\\Maciota\\AppData\\Local\\Temp\\ipykernel_244\\3306087589.py:4: UserWarning: \n",
+      "C:\\Users\\Maciota\\AppData\\Local\\Temp\\ipykernel_4436\\3306087589.py:4: UserWarning: \n",
       "The palette list has fewer values (6) than needed (49) and will cycle, which may produce an uninterpretable plot.\n",
       "  sns.barplot(data=total_estados,\n"
      ]
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 107,
    "id": "042ef540",
    "metadata": {},
    "outputs": [
@@ -896,7 +896,7 @@
        "Name: Valor_Venda, dtype: float64"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 108,
    "id": "70c90a68",
    "metadata": {},
    "outputs": [
@@ -958,11 +958,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "id": "14f10869",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_dsa['Ano'] = df_dsa['Data_Pedido'].apply(lambda x: pd.Series(str(x).split('/')[2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "5ec695da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ano</th>\n",
+       "      <th>Segmento</th>\n",
+       "      <th>Valor_Venda</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>256719.9166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>Corporate</td>\n",
+       "      <td>125819.5957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>Home Office</td>\n",
+       "      <td>88229.0878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>265295.2593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Corporate</td>\n",
+       "      <td>114643.1229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Home Office</td>\n",
+       "      <td>74134.1332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>288459.5572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>Corporate</td>\n",
+       "      <td>203266.7398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>Home Office</td>\n",
+       "      <td>103639.6270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>Consumer</td>\n",
+       "      <td>323359.6019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>Corporate</td>\n",
+       "      <td>235502.7284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>Home Office</td>\n",
+       "      <td>156488.5849</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Ano     Segmento  Valor_Venda\n",
+       "0   2015     Consumer  256719.9166\n",
+       "1   2015    Corporate  125819.5957\n",
+       "2   2015  Home Office   88229.0878\n",
+       "3   2016     Consumer  265295.2593\n",
+       "4   2016    Corporate  114643.1229\n",
+       "5   2016  Home Office   74134.1332\n",
+       "6   2017     Consumer  288459.5572\n",
+       "7   2017    Corporate  203266.7398\n",
+       "8   2017  Home Office  103639.6270\n",
+       "9   2018     Consumer  323359.6019\n",
+       "10  2018    Corporate  235502.7284\n",
+       "11  2018  Home Office  156488.5849"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dsa.groupby(['Ano', 'Segmento'])['Valor_Venda'].sum().reset_index()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -981,11 +1117,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "5735af66",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(457, 12)"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dsa[df_dsa['Valor_Venda'] > 1000].shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -999,11 +1148,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "47b8f2a4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A média de vendas antes do desconto é 230.47\n",
+      "A média de vendas antes do desconto para colunas com Valor Venda maior que 1k é 2116.81\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Média Antes - Considerando todo DF\n",
+    "m_antes = df_dsa['Valor_Venda'].mean()\n",
+    "# Média Antes - Considerando apenas as colunas com Valor Venda maior que 1000\n",
+    "m_antes_des = df_dsa[df_dsa['Valor_Venda'] > 1000].Valor_Venda.mean()\n",
+    "\n",
+    "print(f\"A média de vendas antes do desconto é {m_antes.round(2)}\")\n",
+    "print(f\"A média de vendas antes do desconto para colunas com Valor Venda maior que 1k é {m_antes_des.round(2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "03d2e845",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A média de vendas depois do desconto é 215.51\n",
+      "A média de vendas depois do desconto para colunas com Valor Venda maior que 1k é 1799.29\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Média Depois - Considerando todo DF\n",
+    "m_depois = df_dsa['Valor_Venda'].apply(lambda x: x-(x*15/100) if x > 1000 else x).mean()\n",
+    "# Média Depois - Considerando apenas as colunas com Valor Venda maior que 1000\n",
+    "m_depois_des = df_dsa[df_dsa['Valor_Venda'] > 1000].Valor_Venda.apply(lambda x: x-(x*15/100) if x > 1000 else x).mean()\n",
+    "\n",
+    "print(f\"A média de vendas depois do desconto é {m_depois.round(2)}\")\n",
+    "print(f\"A média de vendas depois do desconto para colunas com Valor Venda maior que 1k é {m_depois_des.round(2)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
